[kio_ftp] fix display of file/directory modification time/date

- QDate() treats the year literally (i.e. 90 is really year 90, not
  1990), so subtracting 1900 is wrong.
- Use QDate::currentDate() instead of QDateTime::currentDateTime(), we
  only need the current date anyway
- Initialize day, month, and year to the current date instead of 0. In
  the case when no year is mentioned in the server's reply (the year is
implicit), it wasn't set to the current year at all, so the result was
either 0 or -1.

BUG: 354597
FIXED-IN: 5.19.0
REVIEW: 126659